         | C   C  O   O  NN  N  Q   Q  U   U  E      S        T   |
         | C      O   O  N N N  Q   Q  U   U  EEE     SSS     T   |
         | C   C  O   O  N  NN  Q  Q   U   U  E          S    T   |
         |  CCC    OOO   N   N   QQ Q   UUU   EEEEE  SSSS     T   |
         +--------------------------------------------------------+

                              Conquest HISTORY

Version 8.1.2 (stable) 12/27/2005

        - fixed localtime() libc futex wait hang in conquestd by
          moving drcheck() out of the signal handler.  Bad Juju.
          Thanks to Bill Patterson for letting me have access to his
          server to locate the problem and test a fix.

        - fixed potential problem with ship attributes that could
          cause ships (including your own) to appear to be stuck in
          Murisak when you enter a game.  Now the clients will
          issue a CPCMD_RELOAD request to the server upon entering a
          ship so that data is always accurate.

        - add patch by Bill Patterson adding a '-f' fullscreen option
          to conquestgl.  Add '-g WxH' option to set the intial window
          size as well.


Version 8.1.1 (stable) 8/8/2005

        - during playback of a recording, honor the user config
          NoRobotMsgs option.

        - send a UDP keepalive packet every 60 seconds to keep
          UDP connections alive for certain firewalls that seem to
          timeout the connection if there is no client->server
          activity. 

          The symptom reported is that you could get into the game and
          play for awhile (10-15 minutes) when suddenly all ship
          movement would stop.  Everything else would work (commands,
          etc) just no ship movement (meaning UDP stopped).

        - clean up some compiler warnings regarding possible use of
          uninited variables.  

        - When a geno occurs, send a message notifying everyone.
          